remove unnecessary fonts

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,7 +1,7 @@
 .element-1
 .element-2 {
     font-size: 28px;
-    font-family: Arial, Helvetica, sans-serif, 'Times New Roman', Times, serif;
+    font-family: Helvetica, sans-serif, 'Times New Roman';
 }
 
 .element-1 {
